Updating Index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
 <font face="Berlin Sans FB" size=12>
 <h1>Vector Field Visualizer</h1>
+    <script>
+
+    </script>
 </font>
 </body>
 </html>
