--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
 <head>
     <title>
-    Vector Field Visualizer
+        Vector Field Visualizer
     </title>
 </head>
 <body>
-<font face="Berlin Sans FB" size=12>
-<h1>Vector Field Visualizer</h1>
-    <script>
-
-    </script>
+<font face="Open Sans" size=12>
+    <h1>Vector Field Visualizer</h1>
 </font>
 </body>
 </html>
