--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     </title>
 </head>
 <body>
-
-<h1>Vector Field Visualizer</h1>
-<font face="Open Sans" size=12>
+<font face="Open Sans" size="12">
+    <h3>Vector Field Visualizer</h3>
 </font>
 </body>
 </html>
