--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@ body, html {
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
-    <i class="fa fa-youtube w3-hover-opacity"></i>
-    <i class="fa fa-github w3-hover-opacity"></i>
-    <i class="fa fa-twitch w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
+    <a class="fa fa-youtube w3-hover-opacity" href="https://youtube.com/vcubingx"></a>
+    <a class="fa fa-github w3-hover-opacity" href="https://github.com/vivek3141"></a>
+    <a class="fa fa-twitch w3-hover-opacity" href="https://twitch.tv/vcubingx"></a>
+    <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/vcubingx"></a>
   </div>
 </footer>
 
