--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ body, html {
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">MY <span class="w3-hide-small">WEBSITE</span> LOGO</span>
   </div>
 </div>
-
+z
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <div class="w3-xlarge w3-section">
-    <a class="fa fa-youtube w3-hover-opacity" href="https://youtube.com/vcubingx"></a>
-    <a class="fa fa-github w3-hover-opacity" href="https://github.com/vivek3141"></a>
-    <a class="fa fa-twitch w3-hover-opacity" href="https://twitch.tv/vcubingx"></a>
-    <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/vcubingx"></a>
-  </div>
+    <div class="w3-xlarge w3-section">
+        <a href="https://youtube.com/vcubingx"><i class="fa fa-youtube w3-hover-opacity"></i></a>
+        <a href="https://github.com/vivek3141"><i class="fa fa-github w3-hover-opacity"></i></a>
+        <a href="https://twitch.tv/vcubingx"><i class="fa fa-twitch w3-hover-opacity"></i></a>
+        <a href="https://twitter.com/vcubingx"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+    </div>
 </footer>
 
 <script>
