--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </style>
 <body>
 <br>
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">VECTOR <span class="w3-hide-small">FIELD</span> VISUALIZER</span>
+<span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">VECTOR <span
+        class="w3-hide-small">FIELD</span> VISUALIZER</span>
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
 </div>
 z
