--- a/index.html
+++ b/index.html
@@ -16,21 +16,11 @@
         color: #777;
         line-height: 1.8;
     }
-
-    /* First image (Logo. Full height) */
-    .bgimg-1 {
-        background-image: url('vector_field.jpg');
-        min-height: 100%;
-    }
-
 </style>
-<body>
+<body background="img/gravel.png">
 <br>
 <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">VECTOR <span
         class="w3-hide-small">FIELD</span> VISUALIZER</span>
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
-</div>
-
 <footer class="w3-center w3-black w3-padding-64">
     <div class="w3-xlarge w3-section">
         <a href="https://youtube.com/vcubingx"><i class="fa fa-youtube w3-hover-opacity"></i></a>
