--- a/index.html
+++ b/index.html
@@ -20,7 +20,29 @@
 <body background="img/gravel.png">
 <br>
 <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">VECTOR <span
-        class="w3-hide-small">FIELD</span> VISUALIZER</span>
+        class="w3-hide-small">FIELD</span> VISUALIZER</span><br>
+<br /><br />
+<div class="w3-center">
+<div class="w3-row-padding">
+    <div class="w3-half w3-row-padding">
+        <img src="img/vector_field.jpg">
+    </div>
+    <div class="w3-half w3-row-padding">
+        <div class="w3-half">
+            <h4>F<sub>x</sub></h4>
+            <input class="w3-input w3-border" type="text" value="cos(x)" id="Fx">
+        </div>
+        <div class="w3-half">
+            <h4>F<sub>y</sub></h4>
+            <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
+        </div>
+        <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+          GRAPH
+        </button>
+    </div>
+</div>
+</div>
+<br /><br />
 <footer class="w3-center w3-black w3-padding-64">
     <div class="w3-xlarge w3-section">
         <a href="https://youtube.com/vcubingx"><i class="fa fa-youtube w3-hover-opacity"></i></a>
@@ -29,5 +51,7 @@
         <a href="https://twitter.com/vcubingx"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     </div>
 </footer>
+<script>
+</script>
 </body>
 </html>
