Fixing API issue and adding JS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="w3-center">
 <div class="w3-row-padding">
     <div class="w3-half w3-row-padding">
-        <img src="img/vector_field.jpg">
+        <img src="img/vector_field.jpg" id="img">
     </div>
     <div class="w3-half w3-row-padding">
         <div class="w3-half">
@@ -39,6 +39,7 @@
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
           GRAPH
         </button>
+        <h1 id="loading"></h1>
     </div>
 </div>
 </div>
@@ -51,5 +52,6 @@
         <a href="https://twitter.com/vcubingx"><i class="fa fa-twitter w3-hover-opacity"></i></a>
     </div>
 </footer>
+<script src="js/get_field.js"></script>
 </body>
 </html>
