--- a/index.html
+++ b/index.html
@@ -21,29 +21,29 @@
 <br>
 <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">VECTOR <span
         class="w3-hide-small">FIELD</span> VISUALIZER</span><br>
-<br /><br />
+<br/><br/>
 <div class="w3-center">
-<div class="w3-row-padding">
-    <div class="w3-half w3-row-padding">
-        <img src="img/vector_field.jpg" id="img">
-    </div>
-    <div class="w3-half w3-row-padding">
-        <div class="w3-half">
-            <h4>F<sub>x</sub></h4>
-            <input class="w3-input w3-border" type="text" value="cos(x)" id="Fx">
+    <div class="w3-row-padding">
+        <div class="w3-half w3-row-padding">
+            <img src="img/vector_field.jpg" id="img">
         </div>
-        <div class="w3-half">
-            <h4>F<sub>y</sub></h4>
-            <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
+        <div class="w3-half w3-row-padding">
+            <div class="w3-half">
+                <h4>F<sub>x</sub></h4>
+                <input class="w3-input w3-border" type="text" value="cos(x)" id="Fx">
+            </div>
+            <div class="w3-half">
+                <h4>F<sub>y</sub></h4>
+                <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
+            </div>
+            <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+                GRAPH
+            </button>
+            <h1 class="w3-center" id="loading"></h1>
         </div>
-        <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
-          GRAPH
-        </button>
-        <h1 id="loading"></h1>
     </div>
 </div>
-</div>
-<br /><br />
+<br/><br/>
 <footer class="w3-center w3-black w3-padding-64">
     <div class="w3-xlarge w3-section">
         <a href="https://youtube.com/vcubingx"><i class="fa fa-youtube w3-hover-opacity"></i></a>
