--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 <h4>F<sub>y</sub></h4>
                 <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
             </div>
+            <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+                Advanced
+            </button>
             <div class="w3-half">
                 <h4>Skip</h4>
                 <input class="w3-input w3-border" type="text" value="1" id="skip">
