--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h4>F<sub>y</sub></h4>
                 <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
             </div>
-            <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+            <button class="w3-button w3-black w3-center w3-section" type="submit" id="read">
                 Advanced
             </button>
             <div class="w3-half">
