--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             <button class="w3-button w3-black w3-center w3-section" type="submit" id="read">
                 Advanced
             </button>
+            <div id="more">
             <div class="w3-half">
                 <h4>Skip</h4>
                 <input class="w3-input w3-border" type="text" value="1" id="skip">
             </div>
             <div class="w3-half"><h4>Bounds</h4>
                 <input class="w3-input w3-border" type="text" value="-10,10" id="bounds"></div>
-            <br><br>
+            </div>
             <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
                 GRAPH
             </button>
