--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="w3-center">
     <div class="w3-row-padding">
         <div class="w3-half w3-row-padding">
-            <img src="img/vector_field.jpg" id="img">
+            <img src="img/vector_field.png" id="img">
         </div>
         <div class="w3-half w3-row-padding">
             <div class="w3-half">
