--- a/index.html
+++ b/index.html
@@ -25,24 +25,21 @@
                 <h4>F<sub>y</sub></h4>
                 <input class="w3-input w3-border" type="text" value="sin(y)" id="Fy">
             </div>
-            <button class="w3-button w3-black w3-center w3-section" type="submit" id="read">
-                Advanced
-            </button>
-            <div id="more">
-            <div class="w3-half">
+
+            <div class="w3-half w3-row-padding">
                 <h4>Skip</h4>
                 <input class="w3-input w3-border" type="text" value="1" id="skip">
             </div>
-            <div class="w3-half"><h4>Bounds</h4>
+            <div class="w3-half w3-row-padding"><h4>Bounds</h4>
                 <input class="w3-input w3-border" type="text" value="-10,10" id="bounds"></div>
-            </div>
-            <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
-                GRAPH
-            </button>
-            <h1 class="w3-center" id="loading"></h1>
         </div>
+        <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+            GRAPH
+        </button>
+        <h1 class="w3-center" id="loading"></h1>
     </div>
 </div>
+
 <br/><br/>
 <footer class="w3-center w3-black w3-padding-64">
     <div class="w3-xlarge w3-section">
