Calculating Divergence and curl

--- a/index.html
+++ b/index.html
@@ -37,18 +37,22 @@
                     <input class="w3-input w3-border" type="text" value="-10,10" id="bounds"></div>
             </div>
 
-            <div id="more2">
-                <div class="w3-half w3-row-padding">
-                    <h4>x</h4>
-                    <input class="w3-input w3-border" type="text" value="0" id="x">
-                </div>
-                <div class="w3-half w3-row-padding"><h4>y</h4>
-                    <input class="w3-input w3-border" type="text" value="0" id="y"></div>
-            </div>
+
         </div>
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="read">
             Advanced
         </button>
+        <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
+            GRAPH
+        </button>
+        <div id="more2">
+            <div class="w3-half w3-row-padding">
+                <h4>x</h4>
+                <input class="w3-input w3-border" type="text" value="0" id="x">
+            </div>
+            <div class="w3-half w3-row-padding"><h4>y</h4>
+                <input class="w3-input w3-border" type="text" value="0" id="y"></div>
+        </div>
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
             GRAPH
         </button>
