--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <img src="img/vector_field.png" id="img">
         </div>
         <span id="dots"></span>
+        <span id="dots2"></span>
 
         <div class="w3-half w3-row-padding">
             <div class="w3-half">
@@ -36,8 +37,6 @@
                 <div class="w3-half w3-row-padding"><h4>Bounds</h4>
                     <input class="w3-input w3-border" type="text" value="-10,10" id="bounds"></div>
             </div>
-
-
         </div>
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="read">
             Advanced
@@ -45,18 +44,20 @@
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
             GRAPH
         </button>
-        <div id="more2">
+
+        <div id="more2" class="w3-half">
             <div class="w3-half w3-row-padding">
                 <h4>x</h4>
                 <input class="w3-input w3-border" type="text" value="0" id="x">
             </div>
             <div class="w3-half w3-row-padding"><h4>y</h4>
-                <input class="w3-input w3-border" type="text" value="0" id="y"></div>
+                <input class="w3-input w3-border" type="text" value="0" id="y">
+            </div>
         </div>
-        <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
-            GRAPH
+        <br>
+        <button class="w3-button w3-black w3-center w3-section" type="submit" id="calc">
+            Calculate Divergence and Curl
         </button>
-
     </div>
 </div>
 
