--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             <div class="w3-half w3-row-padding"><h4>y</h4>
                 <input class="w3-input w3-border" type="text" value="0" id="y">
             </div>
+            <h4 id="div"></h4>
         </div>
         <br>
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="calc">
