--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<!--<link rel="stylesheet" href="css/font-awesome.min.css">-->
 <link rel="stylesheet" href="css/style.css">
 <body background="img/gravel.png">
 <br>
@@ -44,7 +44,6 @@
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
             GRAPH
         </button>
-
         <div id="more2" class="w3-half">
             <div class="w3-half w3-row-padding">
                 <h4>x</h4>
