--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <button class="w3-button w3-black w3-center w3-section" type="submit" id="graph">
             GRAPH
         </button>
-        <div id="more2" class="w3-half">
+        <div id="more2" class="w3-half w3-center w3-section">
             <div class="w3-half w3-row-padding">
                 <h4>x</h4>
                 <input class="w3-input w3-border" type="text" value="0" id="x">
